# AdaptiveMultiGridSolver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: linux  macOS  windows
.travis/: build_unix.sh  build_windows.bat  test_unix_packaging.sh  test_windows_packaging.bat  vcvars_proxy.py
cmake/: compiler_options.cmake  find_dependencies.cmake  options.cmake
include/amgs/: PreProcessor.h  VertexStreamImpl.h
include/amgs_io/: Ply.h  Ply.inl  PlyFile.inl  VertexStreamImpl.h  VertexStreamImpl.inl
include/apps_utils/io/: Image.h  JPEG.h
src/: AdaptiveTreeVisualization.cpp  CMakeLists.txt  ChunkPLY.cpp  EDTInHeat.cpp  ImageStitching.cpp  PointInterpolant.cpp  PoissonRecon.cpp  SSDRecon.cpp
src/afes/: CMakeLists.txt
src/afes/include/afes/: FEMTree.System.inl  FEMTree.h  FEMTree.inl
src/amgs/: CMakeLists.txt
src/amgs/include/amgs/: FEMTree.h  PreProcessor.h  VertexStream.h
src/amgs_io/: CMakeLists.txt
src/amgs_io/include/amgs_io/: Ply.h  VertexStreamImpl.h
src/apps/: AdaptiveTreeVisualization.cpp  CMakeLists.txt  ChunkPLY.cpp  EDTInHeat.cpp  ImageStitching.cpp  PointInterpolant.cpp  PoissonRecon.cpp  SSDRecon.cpp  SurfaceTrimmer.cpp
src/apps_utils/: CMakeLists.txt  CmdLineParser.inl
src/apps_utils/include/apps_utils/: CmdLineParser.inl
src/apps_utils/include/apps_utils/io/: Image.h  Ply.h  PlyFile.inl  VertexStreamImpl.h
src/apps_utils/io/: PNG.h  PNG.inl
test_package/: CMakeLists.txt  conanfile.py  example.cpp
